# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
example/: CMakeLists.txt  main.cpp
gl/: indexbuffer.cpp  indexbuffer.h  mesh.h  program.cpp  program.h  resource.cpp  resource.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexattribute.cpp  vertexattribute.h  vertexbuffer.cpp  vertexbuffer.h
oen/: .actor.h.swo  CMakeLists.txt
oen-example/: CMakeLists.txt
oen-example/learnopengl/: CMakeLists.txt  main.cpp
oen/example/: simple_rectangle_test.cpp
oen/include/oen/: camera.h  component.h  entity.h  material.h  mesh.h  oen.h  render.h  spline_camera.h  translation.h
oen/include/oen/materials/: solid_color.h  textured.h
oen/include/oen/meshes/: cube.h  rectangle.h
oen/res/: solid_color.fs  solid_color.vs  textured.fs  textured.vs
ogl/: CMakeLists.txt
ogl-example/: CMakeLists.txt
ogl-example/learnopengl/: CMakeLists.txt  learnopengl-exercise.cpp
ogl-example/learnopengl/res/shader/: coordinate.fs  coordinate.vs
ogl-example/ogl-example-texture/: CMakeLists.txt  ogl-example-texture.cpp
ogl-example/ogl-example-transform/: CMakeLists.txt  ogl-example-transform.cpp  transform.fs  transform.vs
ogl-loader/: CMakeLists.txt
ogl-loader/example/: CMakeLists.txt  simple_texture.fs  simple_texture_example.cpp
ogl-loader/include/ogl/: loader.h
ogl-loader/src/: loader.cpp
ogl/include/ogl/: .vertexarray.h.swo  framebuffer.h  indexbuffer.h  ogl.h  program.h  resource.h  shader.h  texture.h  vertexarray.h  vertexattribute.h  vertexbuffer.h
ogl/src/: framebuffer.cpp  indexbuffer.cpp  program.cpp  resource.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexattribute.cpp  vertexbuffer.cpp
ren/: CMakeLists.txt
ren/example/: CMakeLists.txt  main.cpp
ren/include/: actor.h
src/: main.cpp
